# CamperOS

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.ota-base
config/: Kconfig.projbuild
core/: CMakeLists.txt
events/: CMakeLists.txt
firmware/: 147b-c602-00000200-campernode.ota  147b-c602-00000201-campernode.ota  README.md  ota-index.json
gpio/: CMakeLists.txt
logger/: CMakeLists.txt
main/: CMakeLists.txt  main.c
ota/: CMakeLists.txt
profiles/: CMakeLists.txt
profiles/battery/include/: profile_battery.h
profiles/battery/src/: profile_battery.c
profiles/climate/include/: profile_climate.h
profiles/climate/src/: profile_climate.c
profiles/custom/include/: profile_custom.h
profiles/custom/src/: profile_custom.c
profiles/fan/include/: profile_fan.h
profiles/fan/src/: profile_fan.c
profiles/include/: profile_interface.h  profile_mgr.h
profiles/light/include/: profile_light.h
profiles/light/src/: profile_light.c
profiles/pump/include/: profile_pump.h
profiles/pump/src/: profile_pump.c
profiles/relay/include/: profile_relay.h
profiles/relay/src/: profile_relay.c
profiles/sensor/include/: profile_sensor.h
profiles/sensor/src/: profile_sensor.c
profiles/src/: profile_mgr.c
profiles/tank/include/: profile_tank.h
profiles/tank/src/: profile_tank.c
sensors/: CMakeLists.txt
storage/: CMakeLists.txt
tools/: campernode_config_wizard.py  campernode_ota_index.json  create_zha_ota.py  einrichtung.bat  einrichtung.html  publish_firmware.py
watchdog/: CMakeLists.txt
(+54 files in other folders)
